// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app": "c8b2fe46a20ee748f914a8b108427882c2c06096a9",
        "role": "primary",
      },
      "name": "test-redis-primary-service-c8f36e4b",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": Object {
        "app": "c8b2fe46a20ee748f914a8b108427882c2c06096a9",
        "role": "primary",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-redis-primary-deployment-c8c0d573",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "c8b2fe46a20ee748f914a8b108427882c2c06096a9",
          "role": "primary",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "c8b2fe46a20ee748f914a8b108427882c2c06096a9",
            "role": "primary",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "GET_HOSTS_FROM",
                  "value": "dns",
                },
              ],
              "image": "k8s.gcr.io/redis:e2e",
              "name": "primary",
              "ports": Array [
                Object {
                  "containerPort": 6379,
                },
              ],
              "resources": Object {
                "requests": Object {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app": "c8dfe5fbb37f49bc8b747fb7ebdee0549ee0d2cbc0",
        "role": "replica",
      },
      "name": "test-redis-replica-service-c814a5a4",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": Object {
        "app": "c8dfe5fbb37f49bc8b747fb7ebdee0549ee0d2cbc0",
        "role": "replica",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-redis-replica-deployment-c8e1d6e2",
    },
    "spec": Object {
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "app": "c8dfe5fbb37f49bc8b747fb7ebdee0549ee0d2cbc0",
          "role": "replica",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "c8dfe5fbb37f49bc8b747fb7ebdee0549ee0d2cbc0",
            "role": "replica",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "GET_HOSTS_FROM",
                  "value": "env",
                },
                Object {
                  "name": "REDIS_MASTER_SERVICE_HOST",
                  "value": "test-redis-primary-service-c8f36e4b",
                },
              ],
              "image": "gcr.io/google_samples/gb-redisslave:v1",
              "name": "replica",
              "ports": Array [
                Object {
                  "containerPort": 6379,
                },
              ],
              "resources": Object {
                "requests": Object {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
]
`;

exports[`no replicas will deploy only the primary 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app": "c8b2fe46a20ee748f914a8b108427882c2c06096a9",
        "role": "primary",
      },
      "name": "test-redis-primary-service-c8f36e4b",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": Object {
        "app": "c8b2fe46a20ee748f914a8b108427882c2c06096a9",
        "role": "primary",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-redis-primary-deployment-c8c0d573",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "c8b2fe46a20ee748f914a8b108427882c2c06096a9",
          "role": "primary",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "c8b2fe46a20ee748f914a8b108427882c2c06096a9",
            "role": "primary",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "GET_HOSTS_FROM",
                  "value": "dns",
                },
              ],
              "image": "k8s.gcr.io/redis:e2e",
              "name": "primary",
              "ports": Array [
                Object {
                  "containerPort": 6379,
                },
              ],
              "resources": Object {
                "requests": Object {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
]
`;
